@@ -84,7 +84,8 @@ This file lists the incompatible changes between Version 2.x and older versions
   - matsolvemod0 is deprecated, use matsolvemod
   - cmpiu / cmpiu, equaliu / equalui : no longer assume that t_INT argument
     is non-negative
-  - rename diviu_rem -> absdiviu_rem, udiviu_rem -> uabsdiviu_rem
+  - rename diviu_rem -> absdiviu_rem, udiviu_rem -> uabsdiviu_rem,
+    udivui_rem -> uabsdivui_rem
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.8 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
